# ClientTrack_CRM_Plus

./: .gitignore  README.md
ClientTrack CRM+/Backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
ClientTrack CRM+/Backend/alembic/: env.py
ClientTrack CRM+/Backend/alembic/versions/: 2d6a80f35c00_tasks_add_reminder_sent.py  309108481fbf_add_emails_table.py  5ccf01cd0ce0_users_add_avatar_url.py  73bc77c65eeb_increase_otp_code_length.py  7456af8d9672_cascade_delete_emails.py  7943975b5e79_clients_add_company_logo.py  814cedf58842_fix_attachments_json.py  9d56489bfef6_clients_add_attachments.py  a26f463a55a6_remove_otp_columns_from_users.py  a813737d9861_fix_attachments_to_jsonb.py  aaf48cae1c61_add_email_verification.py  af9f1e7118d0_add_email_verification.py  c97b48c46d07_add_emails_table.py  ccf3599c28d2_users_add_pending_new_email.py  ce3a049c35e4_initial_schema.py  d935f08d3504_users_add_avatar_path.py  dd30742662e7_add_tasks_table.py  e4a12b5f9c8d_add_stripe_subscription_fields.py  f7a34338441b_update_tasks_timestamps_to_timezone_.py
ClientTrack CRM+/Backend/app/: main.py
ClientTrack CRM+/Backend/app/api/: deps.py
ClientTrack CRM+/Backend/app/core/: config.py  db.py  elasticsearch.py  redis.py  security.py
ClientTrack CRM+/Backend/app/jobs/: es_bootstrap.py  task_reminder.py  token_cleanup.py
ClientTrack CRM+/Backend/app/middleware/: rate_limit.py
ClientTrack CRM+/Backend/app/models/: __init__.py  base.py  client.py  email.py  refresh_token.py  task.py  user.py
ClientTrack CRM+/Backend/app/monitoring/: metrics.py  middleware.py  router.py  utils.py
ClientTrack CRM+/Backend/app/repositories/: __init__.py  client_repo.py  email_repo.py  refresh_token_repo.py  task_repo.py  user_repo.py
ClientTrack CRM+/Backend/app/schemas/: attachment.py  auth.py  client.py  common.py  email.py  resend_otp_request.py  reset_password_request.py  subscription.py  task.py  user.py
ClientTrack CRM+/Backend/app/search/: client_index.py
ClientTrack CRM+/Backend/app/services/: __init__.py  ai_email_service.py  attachment_service.py  auth_service.py  cache_service.py  client_search_service.py  (+9 more)
ClientTrack CRM+/Backend/tests/: README.md  conftest.py
(+121 files in other folders)
