[project]
name = "clienttrack-crm-plus"
version = "0.1.0"
description = "ClientTrack CRM+ Backend"
requires-python = ">=3.10"

dependencies = [
    # --- Core API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # --- Database ---
    "SQLAlchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # --- Validation / Settings ---
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.1.0.post1",

    # --- Auth / Security ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",

    # --- HTTP / External APIs ---
    "httpx>=0.27.0",

    # --- Cache ---
    "redis>=5.0.4",

    # --- Search ---
    "elasticsearch>=8.13.0",

    # --- Background / Scheduling ---
    "apscheduler>=3.10.4",

    # --- Monitoring ---
    "prometheus-client>=0.20.0",

    # --- Utils ---
    "python-dotenv>=1.0.1"
]

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."